[project]
name = "holdup"
description = "A ComfyUI node that waits for a GPU temp and/or a number of seconds."
version = "1.1.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/usrname0/comfyui-holdup"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "usrname0"
DisplayName = "HoldUp"
Icon = ""
